--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -88,14 +88,15 @@ do_glob() {
 == Bash Automated Testing System
 
 mkinitcpio uses bats (Bash Automated Testing System). The tests are found in
-the `link:test[]` directory.
+the `link:test[]` directory. Use `meson test -C build --suite bats` to run
+the test suite.
 
 Each newly added function should also have an accompanying test.
 
 == ShellCheck
 
-All shell scripts must be validated with ShellCheck. Use `make shellcheck` and
-ensure it successfully passes.
+All shell scripts must be validated with ShellCheck. Use `meson test -C build
+--suite shellcheck` and ensure it successfully passes.
 
 == EditorConfig
 
