--- a/AUTHORS
+++ b/AUTHORS
@@ -9,8 +9,8 @@ Arkadij Chistyj <arkdchst@gmail.com>
 Balló György <ballogyor+arch@gmail.com>
 Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 Benjamin Richter <br@waldteufel-online.net>
-Brian Parsons <brian@pmex.com>
 Bill Auger <bill-auger@parabola.nu>
+Brian Parsons <brian@pmex.com>
 Chih-Hsuan Yen <yan12125@gmail.com>
 Chocobo1
 Christian Hesse <mail@eworm.de>
@@ -86,6 +86,7 @@ cedric cvl <cvlc12@outlook.fr>
 classabbyamp <dev@placeviolette.net>
 dNhax <dasNeutrum@googlemail.com>
 ff0x <ff0x@this-is-fine.io>
+ltsdw
 nl6720 <nl6720@gmail.com>
 rogueai
 solsTiCe d'Hiver <solstice.dhiver@gmail.com>
