feat(preset): add support for cmdline and splash preset variables
The mkinitcpio preset system previously required users to specify
--cmdline and --splash options in the preset_options array, which was
verbose and repetitive when multiple presets shared the same values.
This change adds support for ALL_cmdline, ALL_splash variables and
preset-specific <preset>_cmdline, <preset>_splash variables.

This approach provides cleaner and more maintainable preset files:
- ALL_cmdline and ALL_splash serve as defaults for all presets
- Individual presets can override with <preset>_cmdline/splash
- Reduces verbosity when using common splash images or cmdline files
- Maintains backward compatibility with existing preset files

The implementation follows the same pattern as existing preset variables
like ALL_kver and ALL_config, ensuring consistency in the codebase.

Example usage:
  ALL_splash="/usr/share/systemd/bootctl/splash-arch.bmp"
  ALL_cmdline="/etc/kernel/cmdline"
  rescue_cmdline="/etc/kernel/cmdline-rescue"

Documentation and example preset files have been updated to showcase
the new functionality.

Fixes #164

Component: mkinitcpio preset
Signed-off-by: Josephine Pfeiffer <hi@josie.lol>

--- a/man/mkinitcpio.8.adoc
+++ b/man/mkinitcpio.8.adoc
@@ -208,6 +208,14 @@ line arguments for more information about a particular option.
 *<preset>_image* (one of *<preset>_uki* and *<preset>_image* is *required*)::
     Output file path for the generated image (passed via *-g* to mkinitcpio).
 
+*<preset>_cmdline* (defaults to value of *ALL_cmdline*)::
+    Path to the kernel command line file (passed via *--cmdline* to mkinitcpio).
+    This option is only used when generating unified kernel images.
+
+*<preset>_splash* (defaults to value of *ALL_splash*)::
+    Path to the splash image file (passed via *--splash* to mkinitcpio).
+    This option is only used when generating unified kernel images.
+
 *<preset>_options*::
     Further command line arguments to pass to mkinitcpio as a string or array.
     They will get appended at the end of the call to mkinitcpio (after all the
