--- a/man/mkinitcpio.8.adoc
+++ b/man/mkinitcpio.8.adoc
@@ -73,9 +73,9 @@ other features.
 
 *-n*, *--nocolor*::
     Disable color output.
-    
+
 *--nopost*::
-    Do not run post hooks. 
+    Do not run post hooks.
 
 *-U*, *--uki* _filename_::
     Generate a unified kernel image as _filename_. If a CPIO image is
@@ -215,6 +215,12 @@ line arguments for more information about a particular option.
 *<preset>_splash* (defaults to value of *ALL_splash*)::
     Path to the splash image file (passed via *--splash* to mkinitcpio).
     This option is only used when generating unified kernel images.
+
+*<preset>_kerneldest* (defaults to value of *ALL_kerneldest*)::
+    Kernel destination path that will be passed to post hooks. This overrides the
+    default kernel location (usually /boot) and allows customization of where the
+    kernel should be located for booting. The value is passed to post hooks via
+    the KERNELDESTINATION environment variable.
 
 *<preset>_options*::
     Further command line arguments to pass to mkinitcpio as a string or array.
@@ -364,14 +370,14 @@ run in reverse.
 
 == About post hooks
 
-Post hooks are executables or scripts executed after successful image generation for 
-further processing, like signing. When *kernel-install*(8) invokes mkinitcpio, post 
+Post hooks are executables or scripts executed after successful image generation for
+further processing, like signing. When *kernel-install*(8) invokes mkinitcpio, post
 hooks are disabled.
 
 They receive the kernel as the first argument, the image as second and
 optionally the unified kernel image as a third.
 
-Note: If mkinitcpio is invoked with *-k* _none_ or *-k* _version_ and the kernel image 
+Note: If mkinitcpio is invoked with *-k* _none_ or *-k* _version_ and the kernel image
 is not found, the first argument will be empty.
 
 The following environment variables are passed:
